tests/ui/method_no_resource.stderr
error: Missing Resource struct. Example: #[read_all(MyResource)]
 --> $DIR/method_no_resource.rs:7:1
  |
7 | #[read_all]
  | ^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared crate or module `_gotham_restful_resource_foo_resource_method_read_all`
 --> $DIR/method_no_resource.rs:3:10
  |
3 | #[derive(Resource)]
  |          ^^^^^^^^ use of undeclared crate or module `_gotham_restful_resource_foo_resource_method_read_all`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
